# ai-google-analytics-mcp

./: .env.example  .gitignore  CONTEXT.md  README.md  SECURITY.md  google-analytics-ga4-service-account-setup-guide.md  pyproject.toml
research/: LINKS.md  README.md
research/github-projects/: official-analytics-mcp.md
research/notes/: gcloud-this-app-is-blocked.md
research/templates/: project-note.md
scripts/: scan_ga4_project_configs.py
src/ga4_provision_mcp/: __init__.py  admin.py  integrations.py  inventory.py  nextjs.py  server.py  snippets.py
tests/: test_admin_mocked.py  test_integrations.py  test_inventory.py  test_nextjs.py  test_snippets.py
